Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...e93843f](https://github.com/cri-o/cri-o/compare/v1.22.0...e93843f2797ecad3dc5a85f054e4d1ef2ecc658c) on Mon, 08 Nov 2021 18:31:20 UTC.
+[v1.22.0...143babd](https://github.com/cri-o/cri-o/compare/v1.22.0...143babd243d1364136421467d63c0fe848f1894c) on Tue, 09 Nov 2021 01:28:00 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.e93843f2797ecad3dc5a85f054e4d1ef2ecc658c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.e93843f2797ecad3dc5a85f054e4d1ef2ecc658c.tar.gz)
-- [cri-o.arm64.e93843f2797ecad3dc5a85f054e4d1ef2ecc658c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.e93843f2797ecad3dc5a85f054e4d1ef2ecc658c.tar.gz)
+- [cri-o.amd64.143babd243d1364136421467d63c0fe848f1894c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.143babd243d1364136421467d63c0fe848f1894c.tar.gz)
+- [cri-o.arm64.143babd243d1364136421467d63c0fe848f1894c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.143babd243d1364136421467d63c0fe848f1894c.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -116,6 +116,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/moby/term: [9d4ed18 → 3f7ff69](https://github.com/moby/term/compare/9d4ed18...3f7ff69)
 - github.com/modern-go/reflect2: [v1.0.1 → v1.0.2](https://github.com/modern-go/reflect2/compare/v1.0.1...v1.0.2)
 - github.com/onsi/ginkgo: [v1.16.4 → v1.16.5](https://github.com/onsi/ginkgo/compare/v1.16.4...v1.16.5)
+- github.com/onsi/gomega: [v1.16.0 → v1.17.0](https://github.com/onsi/gomega/compare/v1.16.0...v1.17.0)
 - github.com/opencontainers/image-spec: [083f635 → 5ad6f50](https://github.com/opencontainers/image-spec/compare/083f635...5ad6f50)
 - github.com/opencontainers/selinux: [v1.8.4 → v1.9.1](https://github.com/opencontainers/selinux/compare/v1.8.4...v1.9.1)
 - github.com/prometheus/common: [v0.29.0 → v0.30.0](https://github.com/prometheus/common/compare/v0.29.0...v0.30.0)
