--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -2,8 +2,8 @@
   - [Downloads](#downloads)
   - [Changelog since v1.22.0](#changelog-since-v1220)
     - [Changes by Kind](#changes-by-kind)
-      - [Dependency-Change](#dependency-change)
       - [Other](#other)
+      - [Dependency-Change](#dependency-change)
       - [Feature](#feature)
       - [Documentation](#documentation)
       - [Bug or Regression](#bug-or-regression)
@@ -17,24 +17,24 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...529276d](https://github.com/cri-o/cri-o/compare/v1.22.0...529276d0014c0157d3892bd724c1a21d3766cf71) on Tue, 09 Nov 2021 13:28:34 UTC.
+[v1.22.0...518dd42](https://github.com/cri-o/cri-o/compare/v1.22.0...518dd42fb1521386000713dc82c97492cce408b3) on Thu, 11 Nov 2021 16:37:06 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.529276d0014c0157d3892bd724c1a21d3766cf71.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.529276d0014c0157d3892bd724c1a21d3766cf71.tar.gz)
-- [cri-o.arm64.529276d0014c0157d3892bd724c1a21d3766cf71.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.529276d0014c0157d3892bd724c1a21d3766cf71.tar.gz)
+- [cri-o.amd64.518dd42fb1521386000713dc82c97492cce408b3.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.518dd42fb1521386000713dc82c97492cce408b3.tar.gz)
+- [cri-o.arm64.518dd42fb1521386000713dc82c97492cce408b3.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.518dd42fb1521386000713dc82c97492cce408b3.tar.gz)
 
 ## Changelog since v1.22.0
 
 ### Changes by Kind
 
-#### Dependency-Change
- - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
-
 #### Other
  - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
+
+#### Dependency-Change
+ - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### Feature
  - Add support for "io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel" annotation, which tells CRI-O to skip relabeling volumes if the top level is already correctly labeled ([#5373](https://github.com/cri-o/cri-o/pull/5373), [@haircommander](https://github.com/haircommander))
@@ -68,6 +68,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Uncategorized
  - Allow CRI-O to parse > SIGRTMIN signals ([#5366](https://github.com/cri-o/cri-o/pull/5366), [@haircommander](https://github.com/haircommander))
+ - Specify runtime table format in  the error message ([#5452](https://github.com/cri-o/cri-o/pull/5452), [@QiWang19](https://github.com/QiWang19))
 
 ## Dependencies
 
