Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...518dd42](https://github.com/cri-o/cri-o/compare/v1.22.0...518dd42fb1521386000713dc82c97492cce408b3) on Thu, 11 Nov 2021 16:39:35 UTC.
+[v1.22.0...10a09d7](https://github.com/cri-o/cri-o/compare/v1.22.0...10a09d705edae2ab4f3d0351f85e0cf5fc4488e1) on Thu, 11 Nov 2021 21:43:03 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.518dd42fb1521386000713dc82c97492cce408b3.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.518dd42fb1521386000713dc82c97492cce408b3.tar.gz)
-- [cri-o.arm64.518dd42fb1521386000713dc82c97492cce408b3.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.518dd42fb1521386000713dc82c97492cce408b3.tar.gz)
+- [cri-o.amd64.10a09d705edae2ab4f3d0351f85e0cf5fc4488e1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.10a09d705edae2ab4f3d0351f85e0cf5fc4488e1.tar.gz)
+- [cri-o.arm64.10a09d705edae2ab4f3d0351f85e0cf5fc4488e1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.10a09d705edae2ab4f3d0351f85e0cf5fc4488e1.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -91,6 +91,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containerd/cgroups: [v1.0.1 → v1.0.2](https://github.com/containerd/cgroups/compare/v1.0.1...v1.0.2)
 - github.com/containerd/containerd: [v1.5.5 → v1.5.7](https://github.com/containerd/containerd/compare/v1.5.5...v1.5.7)
 - github.com/containerd/stargz-snapshotter/estargz: [2b97b58 → v0.9.0](https://github.com/containerd/stargz-snapshotter/estargz/compare/2b97b58...v0.9.0)
+- github.com/containerd/ttrpc: [v1.0.2 → v1.1.0](https://github.com/containerd/ttrpc/compare/v1.0.2...v1.1.0)
 - github.com/containernetworking/cni: [v0.8.1 → v1.0.1](https://github.com/containernetworking/cni/compare/v0.8.1...v1.0.1)
 - github.com/containernetworking/plugins: [v0.9.1 → v1.0.1](https://github.com/containernetworking/plugins/compare/v0.9.1...v1.0.1)
 - github.com/containers/buildah: [v1.22.3 → v1.23.1](https://github.com/containers/buildah/compare/v1.22.3...v1.23.1)
