Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -2,8 +2,8 @@
   - [Downloads](#downloads)
   - [Changelog since v1.22.0](#changelog-since-v1220)
     - [Changes by Kind](#changes-by-kind)
-      - [Other](#other)
       - [Dependency-Change](#dependency-change)
+      - [Other](#other)
       - [Feature](#feature)
       - [Documentation](#documentation)
       - [Bug or Regression](#bug-or-regression)
@@ -17,24 +17,24 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...acc36e5](https://github.com/cri-o/cri-o/compare/v1.22.0...acc36e5d9fa2d4e467d5dc3e2ff75b811e85aad9) on Fri, 19 Nov 2021 13:11:13 UTC.
+[v1.22.0...2874194](https://github.com/cri-o/cri-o/compare/v1.22.0...2874194394782f20dfa8515c743c62f4c28d9b0c) on Fri, 19 Nov 2021 16:11:46 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.acc36e5d9fa2d4e467d5dc3e2ff75b811e85aad9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.acc36e5d9fa2d4e467d5dc3e2ff75b811e85aad9.tar.gz)
-- [cri-o.arm64.acc36e5d9fa2d4e467d5dc3e2ff75b811e85aad9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.acc36e5d9fa2d4e467d5dc3e2ff75b811e85aad9.tar.gz)
+- [cri-o.amd64.2874194394782f20dfa8515c743c62f4c28d9b0c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.2874194394782f20dfa8515c743c62f4c28d9b0c.tar.gz)
+- [cri-o.arm64.2874194394782f20dfa8515c743c62f4c28d9b0c.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.2874194394782f20dfa8515c743c62f4c28d9b0c.tar.gz)
 
 ## Changelog since v1.22.0
 
 ### Changes by Kind
 
-#### Other
- - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
-
 #### Dependency-Change
  - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
+
+#### Other
+ - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
 
 #### Feature
  - Add support for "io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel" annotation, which tells CRI-O to skip relabeling volumes if the top level is already correctly labeled ([#5373](https://github.com/cri-o/cri-o/pull/5373), [@haircommander](https://github.com/haircommander))
@@ -44,6 +44,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Added `--profile-cpu` and `--profile-mem` CLI flags to write pprof profiles to a file when CRI-O exists. ([#5268](https://github.com/cri-o/cri-o/pull/5268), [@saschagrunert](https://github.com/saschagrunert))
  - Adds support for `allowed_annotations` for workloads. The field functions the same as `allowed_annotations` in runtime handlers, and is meant to replace the runtime handler variant.
   Deprecate `allowed_annotations` in runtime handlers. ([#5358](https://github.com/cri-o/cri-o/pull/5358), [@haircommander](https://github.com/haircommander))
+ - Containers now have a `/run/.containerenv` file to help applications identify that they are running inside a container. ([#5463](https://github.com/cri-o/cri-o/pull/5463), [@pjbgf](https://github.com/pjbgf))
  - Skip SELinux volume relabeling for super privileged containers (`securityContext.seLinuxOptions.type = "spc_t"`). ([#5386](https://github.com/cri-o/cri-o/pull/5386), [@saschagrunert](https://github.com/saschagrunert))
  - The option to export OpenTelemetry trace data has been added. This is experimental and not enabled by default. To enable tracing, configure the tracing section of the crio configuration file. ([#4883](https://github.com/cri-o/cri-o/pull/4883), [@sallyom](https://github.com/sallyom))
 
