--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...8deefdd](https://github.com/cri-o/cri-o/compare/v1.22.0...8deefdd7a3c05f7aae275bd32c7245b6c90d6189) on Tue, 23 Nov 2021 16:45:15 UTC.
+[v1.22.0...036030d](https://github.com/cri-o/cri-o/compare/v1.22.0...036030d8edfe46fb8aa04190c7558be22d18e4ab) on Tue, 23 Nov 2021 19:24:31 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.8deefdd7a3c05f7aae275bd32c7245b6c90d6189.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8deefdd7a3c05f7aae275bd32c7245b6c90d6189.tar.gz)
-- [cri-o.arm64.8deefdd7a3c05f7aae275bd32c7245b6c90d6189.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8deefdd7a3c05f7aae275bd32c7245b6c90d6189.tar.gz)
+- [cri-o.amd64.036030d8edfe46fb8aa04190c7558be22d18e4ab.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.036030d8edfe46fb8aa04190c7558be22d18e4ab.tar.gz)
+- [cri-o.arm64.036030d8edfe46fb8aa04190c7558be22d18e4ab.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.036030d8edfe46fb8aa04190c7558be22d18e4ab.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -37,6 +37,9 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### Feature
+ - Add a [crio.stats] table to the config for configuring all things stats-related.
+  Add ability (with config field StatsCollectionPeriod) to calculate and save stats for pods and containers, rather than return them on demand.
+  Add support for {,List}PodSandboxStats, which allows the kubelet to take advantage of the PodAndContainerStatsFromCRI feature gate--one that is set to be alpha in 1.23. ([#5427](https://github.com/cri-o/cri-o/pull/5427), [@haircommander](https://github.com/haircommander))
  - Add support for "io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel" annotation, which tells CRI-O to skip relabeling volumes if the top level is already correctly labeled ([#5373](https://github.com/cri-o/cri-o/pull/5373), [@haircommander](https://github.com/haircommander))
  - Add support for CNI plugins v1.0.1 ([#5380](https://github.com/cri-o/cri-o/pull/5380), [@saschagrunert](https://github.com/saschagrunert))
  - Add support for swap CRI field, allowing a container's memory swap limit to be configured by the Kubelet.
@@ -137,6 +140,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - go.opentelemetry.io/otel: v0.20.0 → v1.2.0
 - go.opentelemetry.io/proto/otlp: v0.7.0 → v0.10.0
 - golang.org/x/crypto: 0c34fe9 → a769d52
+- golang.org/x/net: abc4532 → 60bc85c
 - golang.org/x/sys: 0f9fa26 → 751e447
 - google.golang.org/grpc: v1.40.0 → v1.42.0
 - google.golang.org/protobuf: v1.26.0 → v1.27.1
@@ -153,7 +157,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - k8s.io/kubernetes/staging/src/k8s.io/component-base: c2b5237 → 8b5a191
 - k8s.io/kubernetes/staging/src/k8s.io/component-helpers: c2b5237 → 8b5a191
 - k8s.io/kubernetes/staging/src/k8s.io/controller-manager: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/cri-api: c2b5237 → 8b5a191
+- k8s.io/kubernetes/staging/src/k8s.io/cri-api: c2b5237 → 9005160
 - k8s.io/kubernetes/staging/src/k8s.io/csi-translation-lib: c2b5237 → 8b5a191
 - k8s.io/kubernetes/staging/src/k8s.io/kube-aggregator: c2b5237 → 8b5a191
 - k8s.io/kubernetes/staging/src/k8s.io/kube-controller-manager: c2b5237 → 8b5a191
