--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -17,14 +17,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...036030d](https://github.com/cri-o/cri-o/compare/v1.22.0...036030d8edfe46fb8aa04190c7558be22d18e4ab) on Tue, 23 Nov 2021 19:26:24 UTC.
+[v1.22.0...7048f24](https://github.com/cri-o/cri-o/compare/v1.22.0...7048f2440217bbb2d6b5b7cfdbad052a4b8527f1) on Tue, 23 Nov 2021 22:08:13 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.036030d8edfe46fb8aa04190c7558be22d18e4ab.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.036030d8edfe46fb8aa04190c7558be22d18e4ab.tar.gz)
-- [cri-o.arm64.036030d8edfe46fb8aa04190c7558be22d18e4ab.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.036030d8edfe46fb8aa04190c7558be22d18e4ab.tar.gz)
+- [cri-o.amd64.7048f2440217bbb2d6b5b7cfdbad052a4b8527f1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.7048f2440217bbb2d6b5b7cfdbad052a4b8527f1.tar.gz)
+- [cri-o.arm64.7048f2440217bbb2d6b5b7cfdbad052a4b8527f1.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.7048f2440217bbb2d6b5b7cfdbad052a4b8527f1.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -56,6 +56,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Improve runtime handler documentation to mention "runtime handler" in favor of the internal "runtime_handler" variable. ([#5395](https://github.com/cri-o/cri-o/pull/5395), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Bug or Regression
+ - Allow for both runtime class and workload level allowed annotations. Now, if a container or pod has both specified, the list will be merged. ([#5465](https://github.com/cri-o/cri-o/pull/5465), [@haircommander](https://github.com/haircommander))
  - Chown the stdin pipe to the user running in the container, so accessing /dev/stdin from an exec session works with crun ([#5391](https://github.com/cri-o/cri-o/pull/5391), [@giuseppe](https://github.com/giuseppe))
  - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5283](https://github.com/cri-o/cri-o/pull/5283), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O waits forever on a conmon process that will not stop ([#5306](https://github.com/cri-o/cri-o/pull/5306), [@haircommander](https://github.com/haircommander))
