--- a/v1.22.1.md
+++ b/v1.22.1.md
@@ -13,14 +13,14 @@
 # CRI-O v1.22.1
 
 The release notes have been generated for the commit range
-[v1.22.0...e3dfe61](https://github.com/cri-o/cri-o/compare/v1.22.0...e3dfe61cafa3922bf7ad9b0a2ac3dc7e6873209b) on Thu, 11 Nov 2021 20:25:59 UTC.
+[v1.22.0...7ade1b0](https://github.com/cri-o/cri-o/compare/v1.22.0...7ade1b04fc8ac7c40cf4cbbea922d7de0a681f76) on Tue, 23 Nov 2021 23:58:27 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.e3dfe61cafa3922bf7ad9b0a2ac3dc7e6873209b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.e3dfe61cafa3922bf7ad9b0a2ac3dc7e6873209b.tar.gz)
-- [cri-o.arm64.e3dfe61cafa3922bf7ad9b0a2ac3dc7e6873209b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.e3dfe61cafa3922bf7ad9b0a2ac3dc7e6873209b.tar.gz)
+- [cri-o.amd64.7ade1b04fc8ac7c40cf4cbbea922d7de0a681f76.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.7ade1b04fc8ac7c40cf4cbbea922d7de0a681f76.tar.gz)
+- [cri-o.arm64.7ade1b04fc8ac7c40cf4cbbea922d7de0a681f76.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.7ade1b04fc8ac7c40cf4cbbea922d7de0a681f76.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -40,6 +40,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where `inspectp` verbose output was incomplete for pods with a dropped infra container ([#5315](https://github.com/cri-o/cri-o/pull/5315), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where host network containers couldn't read their cgroup hierarchy ([#5365](https://github.com/cri-o/cri-o/pull/5365), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5259](https://github.com/cri-o/cri-o/pull/5259), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Merge storage_option from drop-in files to sttorage_option from storage.conf ([#5437](https://github.com/cri-o/cri-o/pull/5437), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
 
