Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -2,8 +2,8 @@
   - [Downloads](#downloads)
   - [Changelog since v1.22.0](#changelog-since-v1220)
     - [Changes by Kind](#changes-by-kind)
-      - [Other](#other)
       - [Dependency-Change](#dependency-change)
+      - [Other](#other)
       - [Feature](#feature)
       - [Documentation](#documentation)
       - [Bug or Regression](#bug-or-regression)
@@ -17,24 +17,24 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...3bfface](https://github.com/cri-o/cri-o/compare/v1.22.0...3bffacec9ffddc13b13a3b92eea64a6742b090ca) on Mon, 29 Nov 2021 17:15:33 UTC.
+[v1.22.0...1e2f62a](https://github.com/cri-o/cri-o/compare/v1.22.0...1e2f62a29a5dbe094a8a93a910615c801ab6ff7a) on Mon, 29 Nov 2021 20:41:59 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.3bffacec9ffddc13b13a3b92eea64a6742b090ca.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.3bffacec9ffddc13b13a3b92eea64a6742b090ca.tar.gz)
-- [cri-o.arm64.3bffacec9ffddc13b13a3b92eea64a6742b090ca.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.3bffacec9ffddc13b13a3b92eea64a6742b090ca.tar.gz)
+- [cri-o.amd64.1e2f62a29a5dbe094a8a93a910615c801ab6ff7a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.1e2f62a29a5dbe094a8a93a910615c801ab6ff7a.tar.gz)
+- [cri-o.arm64.1e2f62a29a5dbe094a8a93a910615c801ab6ff7a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.1e2f62a29a5dbe094a8a93a910615c801ab6ff7a.tar.gz)
 
 ## Changelog since v1.22.0
 
 ### Changes by Kind
 
-#### Other
- - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
-
 #### Dependency-Change
  - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
+
+#### Other
+ - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
 
 #### Feature
  - Add a [crio.stats] table to the config for configuring all things stats-related.
@@ -67,6 +67,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5258](https://github.com/cri-o/cri-o/pull/5258), [@saschagrunert](https://github.com/saschagrunert))
  - Fixed superfluous response.WriteHeader error in HTTP endpoint ([#5405](https://github.com/cri-o/cri-o/pull/5405), [@saschagrunert](https://github.com/saschagrunert))
  - Merge storage_option from drop-in files to sttorage_option from storage.conf ([#5423](https://github.com/cri-o/cri-o/pull/5423), [@QiWang19](https://github.com/QiWang19))
+ - Move namespace cleanup from sandbox stop to sandbox remove. This allows veth entries in the network namespaces of pods to be cleaned up earlier ([#5336](https://github.com/cri-o/cri-o/pull/5336), [@haircommander](https://github.com/haircommander))
 
 #### Other (Cleanup or Flake)
  - Do not log on startup if Intel RDT is not supported. ([#5293](https://github.com/cri-o/cri-o/pull/5293), [@saschagrunert](https://github.com/saschagrunert))
