--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -2,8 +2,8 @@
   - [Downloads](#downloads)
   - [Changelog since v1.22.0](#changelog-since-v1220)
     - [Changes by Kind](#changes-by-kind)
-      - [Dependency-Change](#dependency-change)
       - [Other](#other)
+      - [Dependency-Change](#dependency-change)
       - [Feature](#feature)
       - [Documentation](#documentation)
       - [Bug or Regression](#bug-or-regression)
@@ -17,24 +17,24 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...1e2f62a](https://github.com/cri-o/cri-o/compare/v1.22.0...1e2f62a29a5dbe094a8a93a910615c801ab6ff7a) on Mon, 29 Nov 2021 20:46:36 UTC.
+[v1.22.0...336a2eb](https://github.com/cri-o/cri-o/compare/v1.22.0...336a2ebda5364c7ebca8f08064e31335d746738b) on Thu, 02 Dec 2021 16:16:52 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.1e2f62a29a5dbe094a8a93a910615c801ab6ff7a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.1e2f62a29a5dbe094a8a93a910615c801ab6ff7a.tar.gz)
-- [cri-o.arm64.1e2f62a29a5dbe094a8a93a910615c801ab6ff7a.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.1e2f62a29a5dbe094a8a93a910615c801ab6ff7a.tar.gz)
+- [cri-o.amd64.336a2ebda5364c7ebca8f08064e31335d746738b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.336a2ebda5364c7ebca8f08064e31335d746738b.tar.gz)
+- [cri-o.arm64.336a2ebda5364c7ebca8f08064e31335d746738b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.336a2ebda5364c7ebca8f08064e31335d746738b.tar.gz)
 
 ## Changelog since v1.22.0
 
 ### Changes by Kind
 
-#### Dependency-Change
- - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
-
 #### Other
  - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
+
+#### Dependency-Change
+ - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
 #### Feature
  - Add a [crio.stats] table to the config for configuring all things stats-related.
@@ -42,6 +42,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   Add support for {,List}PodSandboxStats, which allows the kubelet to take advantage of the PodAndContainerStatsFromCRI feature gate--one that is set to be alpha in 1.23. ([#5427](https://github.com/cri-o/cri-o/pull/5427), [@haircommander](https://github.com/haircommander))
  - Add support for "io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel" annotation, which tells CRI-O to skip relabeling volumes if the top level is already correctly labeled ([#5373](https://github.com/cri-o/cri-o/pull/5373), [@haircommander](https://github.com/haircommander))
  - Add support for CNI plugins v1.0.1 ([#5380](https://github.com/cri-o/cri-o/pull/5380), [@saschagrunert](https://github.com/saschagrunert))
+ - Add support for minimum_mappable_{u,g}id which relaxes the requirement on `sc.RunAs{User,Group}`. If set, the `RunAs{User,Group}` value and any explicitly-mapped host IDs are only required to be at or above the configured values. ([#5462](https://github.com/cri-o/cri-o/pull/5462), [@nalind](https://github.com/nalind))
  - Add support for swap CRI field, allowing a container's memory swap limit to be configured by the Kubelet.
   Add support for unified CRI field, allowing a container's cgroupv2 specific files to be configured by the Kubelet ([#5207](https://github.com/cri-o/cri-o/pull/5207), [@haircommander](https://github.com/haircommander))
  - Added `--profile-cpu` and `--profile-mem` CLI flags to write pprof profiles to a file when CRI-O exists. ([#5268](https://github.com/cri-o/cri-o/pull/5268), [@saschagrunert](https://github.com/saschagrunert))
