Update release notes

--- a/v1.22.1.md
+++ b/v1.22.1.md
@@ -13,14 +13,14 @@
 # CRI-O v1.22.1
 
 The release notes have been generated for the commit range
-[v1.22.0...8ed8e79](https://github.com/cri-o/cri-o/compare/v1.22.0...8ed8e7995c7a5f890b84b34b121d9e691a4b1e49) on Mon, 29 Nov 2021 18:09:33 UTC.
+[v1.22.0...e059965](https://github.com/cri-o/cri-o/compare/v1.22.0...e0599652e2b76ea38084b8757e55454ea7a8fed9) on Fri, 03 Dec 2021 18:29:47 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.8ed8e7995c7a5f890b84b34b121d9e691a4b1e49.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8ed8e7995c7a5f890b84b34b121d9e691a4b1e49.tar.gz)
-- [cri-o.arm64.8ed8e7995c7a5f890b84b34b121d9e691a4b1e49.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8ed8e7995c7a5f890b84b34b121d9e691a4b1e49.tar.gz)
+- [cri-o.amd64.e0599652e2b76ea38084b8757e55454ea7a8fed9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.e0599652e2b76ea38084b8757e55454ea7a8fed9.tar.gz)
+- [cri-o.arm64.e0599652e2b76ea38084b8757e55454ea7a8fed9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.e0599652e2b76ea38084b8757e55454ea7a8fed9.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -31,6 +31,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   Skip SELinux volume relabeling for super privileged containers (`securityContext.seLinuxOptions.type = "spc_t"`). ([#5403](https://github.com/cri-o/cri-o/pull/5403), [@haircommander](https://github.com/haircommander))
 
 #### Bug or Regression
+ - Fix a segfault if a workload is configured without the resources table ([#5486](https://github.com/cri-o/cri-o/pull/5486), [@haircommander](https://github.com/haircommander))
  - Fix an RSS regression with exec sync requests ([#5245](https://github.com/cri-o/cri-o/pull/5245), [@haircommander](https://github.com/haircommander))
 
 #### Uncategorized
