--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -2,8 +2,9 @@
   - [Downloads](#downloads)
   - [Changelog since v1.22.0](#changelog-since-v1220)
     - [Changes by Kind](#changes-by-kind)
-      - [Dependency-Change](#dependency-change)
       - [Other](#other)
+      - [Dependency-Change](#dependency-change)
+      - [API Change](#api-change)
       - [Feature](#feature)
       - [Documentation](#documentation)
       - [Bug or Regression](#bug-or-regression)
@@ -17,24 +18,27 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...367232b](https://github.com/cri-o/cri-o/compare/v1.22.0...367232bb1bc7ab3a3bd5a863daf701b036966473) on Fri, 03 Dec 2021 02:02:12 UTC.
+[v1.22.0...d57d291](https://github.com/cri-o/cri-o/compare/v1.22.0...d57d2915beeb7f2d32813f4586342d860d710b4b) on Mon, 06 Dec 2021 15:14:45 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.367232bb1bc7ab3a3bd5a863daf701b036966473.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.367232bb1bc7ab3a3bd5a863daf701b036966473.tar.gz)
-- [cri-o.arm64.367232bb1bc7ab3a3bd5a863daf701b036966473.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.367232bb1bc7ab3a3bd5a863daf701b036966473.tar.gz)
+- [cri-o.amd64.d57d2915beeb7f2d32813f4586342d860d710b4b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d57d2915beeb7f2d32813f4586342d860d710b4b.tar.gz)
+- [cri-o.arm64.d57d2915beeb7f2d32813f4586342d860d710b4b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d57d2915beeb7f2d32813f4586342d860d710b4b.tar.gz)
 
 ## Changelog since v1.22.0
 
 ### Changes by Kind
 
+#### Other
+ - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
+
 #### Dependency-Change
  - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
 
-#### Other
- - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
+#### API Change
+ - Drop support for `v1alpha2` Container Runtime Interface (CRI) and require `v1`. ([#5471](https://github.com/cri-o/cri-o/pull/5471), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Feature
  - Add a [crio.stats] table to the config for configuring all things stats-related.
