Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...d57d291](https://github.com/cri-o/cri-o/compare/v1.22.0...d57d2915beeb7f2d32813f4586342d860d710b4b) on Mon, 06 Dec 2021 15:16:14 UTC.
+[v1.22.0...fc844e4](https://github.com/cri-o/cri-o/compare/v1.22.0...fc844e4f5cf0b64f86ab6eeecc681852239fde3f) on Mon, 13 Dec 2021 18:14:12 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.d57d2915beeb7f2d32813f4586342d860d710b4b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.d57d2915beeb7f2d32813f4586342d860d710b4b.tar.gz)
-- [cri-o.arm64.d57d2915beeb7f2d32813f4586342d860d710b4b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.d57d2915beeb7f2d32813f4586342d860d710b4b.tar.gz)
+- [cri-o.amd64.fc844e4f5cf0b64f86ab6eeecc681852239fde3f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.fc844e4f5cf0b64f86ab6eeecc681852239fde3f.tar.gz)
+- [cri-o.arm64.fc844e4f5cf0b64f86ab6eeecc681852239fde3f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.fc844e4f5cf0b64f86ab6eeecc681852239fde3f.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -59,6 +59,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 #### Documentation
  - Fixed `crio_image_pulls_layer_size_` metric name in tutorials/metrics.md ([#5278](https://github.com/cri-o/cri-o/pull/5278), [@saschagrunert](https://github.com/saschagrunert))
  - Improve runtime handler documentation to mention "runtime handler" in favor of the internal "runtime_handler" variable. ([#5395](https://github.com/cri-o/cri-o/pull/5395), [@saschagrunert](https://github.com/saschagrunert))
+ - Improved some error messages related to user namespaces. ([#5494](https://github.com/cri-o/cri-o/pull/5494), [@frasertweedale](https://github.com/frasertweedale))
 
 #### Bug or Regression
  - Allow for both runtime class and workload level allowed annotations. Now, if a container or pod has both specified, the list will be merged. ([#5465](https://github.com/cri-o/cri-o/pull/5465), [@haircommander](https://github.com/haircommander))
