--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...fc844e4](https://github.com/cri-o/cri-o/compare/v1.22.0...fc844e4f5cf0b64f86ab6eeecc681852239fde3f) on Mon, 13 Dec 2021 18:14:12 UTC.
+[v1.22.0...daab4d1](https://github.com/cri-o/cri-o/compare/v1.22.0...daab4d1d8431cf3af59855d3ad220e5ded5e5822) on Mon, 13 Dec 2021 23:53:42 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.fc844e4f5cf0b64f86ab6eeecc681852239fde3f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.fc844e4f5cf0b64f86ab6eeecc681852239fde3f.tar.gz)
-- [cri-o.arm64.fc844e4f5cf0b64f86ab6eeecc681852239fde3f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.fc844e4f5cf0b64f86ab6eeecc681852239fde3f.tar.gz)
+- [cri-o.amd64.daab4d1d8431cf3af59855d3ad220e5ded5e5822.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.daab4d1d8431cf3af59855d3ad220e5ded5e5822.tar.gz)
+- [cri-o.arm64.daab4d1d8431cf3af59855d3ad220e5ded5e5822.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.daab4d1d8431cf3af59855d3ad220e5ded5e5822.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -80,6 +80,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
 
 #### Uncategorized
  - Allow CRI-O to parse > SIGRTMIN signals ([#5366](https://github.com/cri-o/cri-o/pull/5366), [@haircommander](https://github.com/haircommander))
+ - Fix a case where conmon children are sometimes leaked ([#5500](https://github.com/cri-o/cri-o/pull/5500), [@haircommander](https://github.com/haircommander))
  - Specify runtime table format in  the error message ([#5452](https://github.com/cri-o/cri-o/pull/5452), [@QiWang19](https://github.com/QiWang19))
 
 ## Dependencies
