--- a/v1.22.1.md
+++ b/v1.22.1.md
@@ -13,14 +13,14 @@
 # CRI-O v1.22.1
 
 The release notes have been generated for the commit range
-[v1.22.0...e059965](https://github.com/cri-o/cri-o/compare/v1.22.0...e0599652e2b76ea38084b8757e55454ea7a8fed9) on Fri, 03 Dec 2021 18:29:47 UTC.
+[v1.22.0...aeeadca](https://github.com/cri-o/cri-o/compare/v1.22.0...aeeadcaf5baacca87ca93aafbf52653a6d17b15d) on Tue, 14 Dec 2021 00:45:50 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.e0599652e2b76ea38084b8757e55454ea7a8fed9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.e0599652e2b76ea38084b8757e55454ea7a8fed9.tar.gz)
-- [cri-o.arm64.e0599652e2b76ea38084b8757e55454ea7a8fed9.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.e0599652e2b76ea38084b8757e55454ea7a8fed9.tar.gz)
+- [cri-o.amd64.aeeadcaf5baacca87ca93aafbf52653a6d17b15d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.aeeadcaf5baacca87ca93aafbf52653a6d17b15d.tar.gz)
+- [cri-o.arm64.aeeadcaf5baacca87ca93aafbf52653a6d17b15d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.aeeadcaf5baacca87ca93aafbf52653a6d17b15d.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -42,6 +42,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where host network containers couldn't read their cgroup hierarchy ([#5365](https://github.com/cri-o/cri-o/pull/5365), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5259](https://github.com/cri-o/cri-o/pull/5259), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Merge storage_option from drop-in files to sttorage_option from storage.conf ([#5437](https://github.com/cri-o/cri-o/pull/5437), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Move namespace cleanup from sandbox stop to sandbox remove. This allows veth entries in the network namespaces of pods to be cleaned up earlier ([#5477](https://github.com/cri-o/cri-o/pull/5477), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
 
 ## Dependencies
 
