Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...daab4d1](https://github.com/cri-o/cri-o/compare/v1.22.0...daab4d1d8431cf3af59855d3ad220e5ded5e5822) on Mon, 13 Dec 2021 23:56:50 UTC.
+[v1.22.0...116b6ce](https://github.com/cri-o/cri-o/compare/v1.22.0...116b6cecbf38d7fff811ac6c184c708410e0664f) on Tue, 14 Dec 2021 19:14:31 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.daab4d1d8431cf3af59855d3ad220e5ded5e5822.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.daab4d1d8431cf3af59855d3ad220e5ded5e5822.tar.gz)
-- [cri-o.arm64.daab4d1d8431cf3af59855d3ad220e5ded5e5822.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.daab4d1d8431cf3af59855d3ad220e5ded5e5822.tar.gz)
+- [cri-o.amd64.116b6cecbf38d7fff811ac6c184c708410e0664f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.116b6cecbf38d7fff811ac6c184c708410e0664f.tar.gz)
+- [cri-o.arm64.116b6cecbf38d7fff811ac6c184c708410e0664f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.116b6cecbf38d7fff811ac6c184c708410e0664f.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -86,15 +86,23 @@ Download one of our static release bundles via our Google Cloud Bucket:
 ## Dependencies
 
 ### Added
+- github.com/antlr/antlr4/runtime/Go/antlr: [b48c857](https://github.com/antlr/antlr4/runtime/Go/antlr/tree/b48c857)
 - github.com/dtylman/scp: [f3000a3](https://github.com/dtylman/scp/tree/f3000a3)
+- github.com/getkin/kin-openapi: [v0.76.0](https://github.com/getkin/kin-openapi/tree/v0.76.0)
+- github.com/go-logr/zapr: [v1.2.0](https://github.com/go-logr/zapr/tree/v1.2.0)
+- github.com/google/cel-go: [v0.9.0](https://github.com/google/cel-go/tree/v0.9.0)
+- github.com/google/cel-spec: [v0.6.0](https://github.com/google/cel-spec/tree/v0.6.0)
 - github.com/sclevine/agouti: [v3.0.0+incompatible](https://github.com/sclevine/agouti/tree/v3.0.0)
 - go.opentelemetry.io/otel/exporters/otlp/otlptrace/otlptracegrpc: v1.2.0
 - go.opentelemetry.io/otel/exporters/otlp/otlptrace: v1.2.0
+- sigs.k8s.io/json: c049b76
 
 ### Changed
+- github.com/GoogleCloudPlatform/k8s-cloud-provider: [7901bc8 → ea6160c](https://github.com/GoogleCloudPlatform/k8s-cloud-provider/compare/7901bc8...ea6160c)
 - github.com/Microsoft/go-winio: [v0.5.0 → v0.5.1](https://github.com/Microsoft/go-winio/compare/v0.5.0...v0.5.1)
 - github.com/Microsoft/hcsshim: [v0.8.20 → v0.8.23](https://github.com/Microsoft/hcsshim/compare/v0.8.20...v0.8.23)
 - github.com/alexflint/go-filemutex: [72bdc8e → v1.1.0](https://github.com/alexflint/go-filemutex/compare/72bdc8e...v1.1.0)
+- github.com/benbjohnson/clock: [v1.0.3 → v1.1.0](https://github.com/benbjohnson/clock/compare/v1.0.3...v1.1.0)
 - github.com/buger/jsonparser: [f4dd9f5 → v1.1.1](https://github.com/buger/jsonparser/compare/f4dd9f5...v1.1.1)
 - github.com/cenkalti/backoff/v4: [v4.1.0 → v4.1.1](https://github.com/cenkalti/backoff/v4/compare/v4.1.0...v4.1.1)
 - github.com/cespare/xxhash/v2: [v2.1.1 → v2.1.2](https://github.com/cespare/xxhash/v2/compare/v2.1.1...v2.1.2)
@@ -113,15 +121,19 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/containers/podman/v3: [v3.3.0 → 8bcc086](https://github.com/containers/podman/v3/compare/v3.3.0...8bcc086)
 - github.com/containers/psgo: [v1.5.2 → v1.7.1](https://github.com/containers/psgo/compare/v1.5.2...v1.7.1)
 - github.com/containers/storage: [v1.34.1 → v1.37.0](https://github.com/containers/storage/compare/v1.34.1...v1.37.0)
+- github.com/coredns/corefile-migration: [v1.0.12 → v1.0.14](https://github.com/coredns/corefile-migration/compare/v1.0.12...v1.0.14)
 - github.com/coreos/go-iptables: [v0.5.0 → v0.6.0](https://github.com/coreos/go-iptables/compare/v0.5.0...v0.6.0)
 - github.com/creack/pty: [v1.1.15 → v1.1.17](https://github.com/creack/pty/compare/v1.1.15...v1.1.17)
 - github.com/cri-o/ocicni: [4ea5fb8 → b388448](https://github.com/cri-o/ocicni/compare/4ea5fb8...b388448)
 - github.com/docker/docker: [v20.10.8+incompatible → v20.10.9+incompatible](https://github.com/docker/docker/compare/v20.10.8...v20.10.9)
 - github.com/envoyproxy/go-control-plane: [63b5d3c → cf90f65](https://github.com/envoyproxy/go-control-plane/compare/63b5d3c...cf90f65)
+- github.com/evanphx/json-patch: [v4.11.0+incompatible → v4.12.0+incompatible](https://github.com/evanphx/json-patch/compare/v4.11.0...v4.12.0)
 - github.com/fsnotify/fsnotify: [v1.4.9 → v1.5.1](https://github.com/fsnotify/fsnotify/compare/v1.4.9...v1.5.1)
 - github.com/fsouza/go-dockerclient: [v1.7.3 → v1.7.4](https://github.com/fsouza/go-dockerclient/compare/v1.7.3...v1.7.4)
 - github.com/go-logr/logr: [v0.4.0 → v1.2.0](https://github.com/go-logr/logr/compare/v0.4.0...v1.2.0)
 - github.com/godbus/dbus/v5: [v5.0.4 → v5.0.6](https://github.com/godbus/dbus/v5/compare/v5.0.4...v5.0.6)
+- github.com/golang/glog: [23def4e → v1.0.0](https://github.com/golang/glog/compare/23def4e...v1.0.0)
+- github.com/google/cadvisor: [v0.39.2 → v0.43.0](https://github.com/google/cadvisor/compare/v0.39.2...v0.43.0)
 - github.com/intel/goresctrl: [v0.1.0 → v0.2.0](https://github.com/intel/goresctrl/compare/v0.1.0...v0.2.0)
 - github.com/j-keck/arping: [2cf9dc6 → v1.0.2](https://github.com/j-keck/arping/compare/2cf9dc6...v1.0.2)
 - github.com/json-iterator/go: [v1.1.11 → v1.1.12](https://github.com/json-iterator/go/compare/v1.1.11...v1.1.12)
@@ -143,44 +155,58 @@ Download one of our static release bundles via our Google Cloud Bucket:
 - github.com/vbauerster/mpb/v7: [v7.0.3 → v7.1.5](https://github.com/vbauerster/mpb/v7/compare/v7.0.3...v7.1.5)
 - github.com/vishvananda/netlink: [d40f988 → e1a867c](https://github.com/vishvananda/netlink/compare/d40f988...e1a867c)
 - github.com/vishvananda/netns: [db3c7e5 → 2eb08e3](https://github.com/vishvananda/netns/compare/db3c7e5...2eb08e3)
+- github.com/yuin/goldmark: [v1.3.5 → v1.4.0](https://github.com/yuin/goldmark/compare/v1.3.5...v1.4.0)
 - go.opentelemetry.io/contrib/instrumentation/google.golang.org/grpc/otelgrpc: v0.20.0 → v0.26.1
 - go.opentelemetry.io/otel/sdk: v0.20.0 → v1.2.0
 - go.opentelemetry.io/otel/trace: v0.20.0 → v1.2.0
 - go.opentelemetry.io/otel: v0.20.0 → v1.2.0
 - go.opentelemetry.io/proto/otlp: v0.7.0 → v0.10.0
-- golang.org/x/crypto: 0c34fe9 → a769d52
-- golang.org/x/net: abc4532 → 60bc85c
+- go.uber.org/zap: v1.17.0 → v1.19.0
+- golang.org/x/crypto: 0c34fe9 → 32db794
+- golang.org/x/net: abc4532 → e898025
+- golang.org/x/oauth2: f6687ab → 2bc19b1
 - golang.org/x/sys: 0f9fa26 → 751e447
+- golang.org/x/text: v0.3.6 → v0.3.7
+- golang.org/x/tools: v0.1.2 → d4cc65f
+- google.golang.org/api: v0.44.0 → v0.46.0
 - google.golang.org/grpc: v1.40.0 → v1.42.0
 - google.golang.org/protobuf: v1.26.0 → v1.27.1
+- k8s.io/gengo: b6c5ce2 → 485abfe
 - k8s.io/klog/v2: v2.10.0 → v2.30.0
-- k8s.io/kubernetes/staging/src/k8s.io/api: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/apiextensions-apiserver: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/apimachinery: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/apiserver: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/cli-runtime: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/client-go: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/cloud-provider: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/cluster-bootstrap: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/code-generator: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/component-base: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/component-helpers: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/controller-manager: c2b5237 → 8b5a191
+- k8s.io/kube-openapi: 9528897 → e816edb
+- k8s.io/kubernetes/staging/src/k8s.io/api: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/apiextensions-apiserver: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/apimachinery: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/apiserver: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/cli-runtime: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/client-go: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/cloud-provider: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/cluster-bootstrap: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/code-generator: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/component-base: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/component-helpers: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/controller-manager: c2b5237 → ab69524
 - k8s.io/kubernetes/staging/src/k8s.io/cri-api: c2b5237 → 9005160
-- k8s.io/kubernetes/staging/src/k8s.io/csi-translation-lib: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/kube-aggregator: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/kube-controller-manager: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/kube-proxy: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/kube-scheduler: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/kubectl: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/kubelet: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/legacy-cloud-providers: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/metrics: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/mount-utils: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/pod-security-admission: c2b5237 → 8b5a191
-- k8s.io/kubernetes/staging/src/k8s.io/sample-apiserver: c2b5237 → 8b5a191
-- k8s.io/kubernetes: v1.22.0 → v1.22.2
-- k8s.io/utils: 4b05e18 → bdf08cb
+- k8s.io/kubernetes/staging/src/k8s.io/csi-translation-lib: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/kube-aggregator: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/kube-controller-manager: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/kube-proxy: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/kube-scheduler: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/kubectl: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/kubelet: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/legacy-cloud-providers: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/metrics: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/mount-utils: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/pod-security-admission: c2b5237 → ab69524
+- k8s.io/kubernetes/staging/src/k8s.io/sample-apiserver: c2b5237 → ab69524
+- k8s.io/kubernetes: v1.22.0 → v1.23.0
+- k8s.io/system-validators: v1.5.0 → v1.6.0
+- k8s.io/utils: 4b05e18 → cb0fa31
+- sigs.k8s.io/apiserver-network-proxy/konnectivity-client: v0.0.22 → v0.0.25
+- sigs.k8s.io/kustomize/api: v0.8.11 → v0.10.1
+- sigs.k8s.io/kustomize/cmd/config: v0.9.13 → v0.10.2
+- sigs.k8s.io/kustomize/kustomize/v4: v4.2.0 → v4.4.1
+- sigs.k8s.io/kustomize/kyaml: v0.11.0 → v0.13.0
 - sigs.k8s.io/yaml: v1.2.0 → v1.3.0
 
 ### Removed
