Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -2,8 +2,8 @@
   - [Downloads](#downloads)
   - [Changelog since v1.22.0](#changelog-since-v1220)
     - [Changes by Kind](#changes-by-kind)
-      - [Other](#other)
       - [Dependency-Change](#dependency-change)
+      - [Other](#other)
       - [API Change](#api-change)
       - [Feature](#feature)
       - [Documentation](#documentation)
@@ -18,24 +18,24 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...116b6ce](https://github.com/cri-o/cri-o/compare/v1.22.0...116b6cecbf38d7fff811ac6c184c708410e0664f) on Tue, 14 Dec 2021 19:17:51 UTC.
+[v1.22.0...8da1f67](https://github.com/cri-o/cri-o/compare/v1.22.0...8da1f67e24b20fd36f274ef58e962abc6659490b) on Wed, 15 Dec 2021 02:19:54 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.116b6cecbf38d7fff811ac6c184c708410e0664f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.116b6cecbf38d7fff811ac6c184c708410e0664f.tar.gz)
-- [cri-o.arm64.116b6cecbf38d7fff811ac6c184c708410e0664f.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.116b6cecbf38d7fff811ac6c184c708410e0664f.tar.gz)
+- [cri-o.amd64.8da1f67e24b20fd36f274ef58e962abc6659490b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8da1f67e24b20fd36f274ef58e962abc6659490b.tar.gz)
+- [cri-o.arm64.8da1f67e24b20fd36f274ef58e962abc6659490b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8da1f67e24b20fd36f274ef58e962abc6659490b.tar.gz)
 
 ## Changelog since v1.22.0
 
 ### Changes by Kind
 
-#### Other
- - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
-
 #### Dependency-Change
  - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
+
+#### Other
+ - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
 
 #### API Change
  - Drop support for `v1alpha2` Container Runtime Interface (CRI) and require `v1`. ([#5471](https://github.com/cri-o/cri-o/pull/5471), [@saschagrunert](https://github.com/saschagrunert))
@@ -66,6 +66,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Chown the stdin pipe to the user running in the container, so accessing /dev/stdin from an exec session works with crun ([#5391](https://github.com/cri-o/cri-o/pull/5391), [@giuseppe](https://github.com/giuseppe))
  - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5283](https://github.com/cri-o/cri-o/pull/5283), [@haircommander](https://github.com/haircommander))
  - Fix a bug where CRI-O waits forever on a conmon process that will not stop ([#5306](https://github.com/cri-o/cri-o/pull/5306), [@haircommander](https://github.com/haircommander))
+ - Fix a bug where CRI-O would never shutdown if the networking plugin wasn't configured correctly ([#5284](https://github.com/cri-o/cri-o/pull/5284), [@haircommander](https://github.com/haircommander))
  - Fix a bug where `inspectp` verbose output was incomplete for pods with a dropped infra container ([#5313](https://github.com/cri-o/cri-o/pull/5313), [@haircommander](https://github.com/haircommander))
  - Fix a bug where host network containers couldn't read their cgroup hierarchy ([#5244](https://github.com/cri-o/cri-o/pull/5244), [@haircommander](https://github.com/haircommander))
  - Fix an RSS regression with exec sync requests ([#5245](https://github.com/cri-o/cri-o/pull/5245), [@haircommander](https://github.com/haircommander))
