Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...8da1f67](https://github.com/cri-o/cri-o/compare/v1.22.0...8da1f67e24b20fd36f274ef58e962abc6659490b) on Wed, 15 Dec 2021 02:24:08 UTC.
+[v1.22.0...183d7ef](https://github.com/cri-o/cri-o/compare/v1.22.0...183d7ef1d899c9b087152fae62ff35b2affb8888) on Thu, 16 Dec 2021 03:06:07 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.8da1f67e24b20fd36f274ef58e962abc6659490b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.8da1f67e24b20fd36f274ef58e962abc6659490b.tar.gz)
-- [cri-o.arm64.8da1f67e24b20fd36f274ef58e962abc6659490b.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.8da1f67e24b20fd36f274ef58e962abc6659490b.tar.gz)
+- [cri-o.amd64.183d7ef1d899c9b087152fae62ff35b2affb8888.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.183d7ef1d899c9b087152fae62ff35b2affb8888.tar.gz)
+- [cri-o.arm64.183d7ef1d899c9b087152fae62ff35b2affb8888.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.183d7ef1d899c9b087152fae62ff35b2affb8888.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -46,6 +46,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
   Add support for {,List}PodSandboxStats, which allows the kubelet to take advantage of the PodAndContainerStatsFromCRI feature gate--one that is set to be alpha in 1.23. ([#5427](https://github.com/cri-o/cri-o/pull/5427), [@haircommander](https://github.com/haircommander))
  - Add support for "io.kubernetes.cri-o.TrySkipVolumeSELinuxLabel" annotation, which tells CRI-O to skip relabeling volumes if the top level is already correctly labeled ([#5373](https://github.com/cri-o/cri-o/pull/5373), [@haircommander](https://github.com/haircommander))
  - Add support for CNI plugins v1.0.1 ([#5380](https://github.com/cri-o/cri-o/pull/5380), [@saschagrunert](https://github.com/saschagrunert))
+ - Add support for TARGET namespace mode, which enables support for ephemeral containers. ([#5440](https://github.com/cri-o/cri-o/pull/5440), [@haircommander](https://github.com/haircommander))
  - Add support for minimum_mappable_{u,g}id which relaxes the requirement on `sc.RunAs{User,Group}`. If set, the `RunAs{User,Group}` value and any explicitly-mapped host IDs are only required to be at or above the configured values. ([#5462](https://github.com/cri-o/cri-o/pull/5462), [@nalind](https://github.com/nalind))
  - Add support for swap CRI field, allowing a container's memory swap limit to be configured by the Kubelet.
   Add support for unified CRI field, allowing a container's cgroupv2 specific files to be configured by the Kubelet ([#5207](https://github.com/cri-o/cri-o/pull/5207), [@haircommander](https://github.com/haircommander))
