--- a/v1.22.1.md
+++ b/v1.22.1.md
@@ -13,14 +13,14 @@
 # CRI-O v1.22.1
 
 The release notes have been generated for the commit range
-[v1.22.0...aeeadca](https://github.com/cri-o/cri-o/compare/v1.22.0...aeeadcaf5baacca87ca93aafbf52653a6d17b15d) on Tue, 14 Dec 2021 00:45:50 UTC.
+[v1.22.0...f1d2c6e](https://github.com/cri-o/cri-o/compare/v1.22.0...f1d2c6e332e1bc485a83b120736e068f94da55b2) on Thu, 16 Dec 2021 07:56:52 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.aeeadcaf5baacca87ca93aafbf52653a6d17b15d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.aeeadcaf5baacca87ca93aafbf52653a6d17b15d.tar.gz)
-- [cri-o.arm64.aeeadcaf5baacca87ca93aafbf52653a6d17b15d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.aeeadcaf5baacca87ca93aafbf52653a6d17b15d.tar.gz)
+- [cri-o.amd64.f1d2c6e332e1bc485a83b120736e068f94da55b2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.f1d2c6e332e1bc485a83b120736e068f94da55b2.tar.gz)
+- [cri-o.arm64.f1d2c6e332e1bc485a83b120736e068f94da55b2.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.f1d2c6e332e1bc485a83b120736e068f94da55b2.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -40,6 +40,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Fix a bug where CRI-O waits forever on a conmon process that will not stop ([#5309](https://github.com/cri-o/cri-o/pull/5309), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where `inspectp` verbose output was incomplete for pods with a dropped infra container ([#5315](https://github.com/cri-o/cri-o/pull/5315), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where host network containers couldn't read their cgroup hierarchy ([#5365](https://github.com/cri-o/cri-o/pull/5365), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
+ - Fix a case where conmon children are sometimes leaked ([#5503](https://github.com/cri-o/cri-o/pull/5503), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fixed missing quantile values in `container_runtime_crio_operations_latency_microseconds_total` metrics ([#5259](https://github.com/cri-o/cri-o/pull/5259), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Merge storage_option from drop-in files to sttorage_option from storage.conf ([#5437](https://github.com/cri-o/cri-o/pull/5437), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Move namespace cleanup from sandbox stop to sandbox remove. This allows veth entries in the network namespaces of pods to be cleaned up earlier ([#5477](https://github.com/cri-o/cri-o/pull/5477), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
