Update release notes

--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -18,14 +18,14 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...183d7ef](https://github.com/cri-o/cri-o/compare/v1.22.0...183d7ef1d899c9b087152fae62ff35b2affb8888) on Thu, 16 Dec 2021 03:06:07 UTC.
+[v1.22.0...ff7dfeb](https://github.com/cri-o/cri-o/compare/v1.22.0...ff7dfebe8462cd65872870255b0b9f41646505ee) on Thu, 16 Dec 2021 09:15:14 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.183d7ef1d899c9b087152fae62ff35b2affb8888.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.183d7ef1d899c9b087152fae62ff35b2affb8888.tar.gz)
-- [cri-o.arm64.183d7ef1d899c9b087152fae62ff35b2affb8888.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.183d7ef1d899c9b087152fae62ff35b2affb8888.tar.gz)
+- [cri-o.amd64.ff7dfebe8462cd65872870255b0b9f41646505ee.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.ff7dfebe8462cd65872870255b0b9f41646505ee.tar.gz)
+- [cri-o.arm64.ff7dfebe8462cd65872870255b0b9f41646505ee.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.ff7dfebe8462cd65872870255b0b9f41646505ee.tar.gz)
 
 ## Changelog since v1.22.0
 
@@ -54,6 +54,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Adds support for `allowed_annotations` for workloads. The field functions the same as `allowed_annotations` in runtime handlers, and is meant to replace the runtime handler variant.
   Deprecate `allowed_annotations` in runtime handlers. ([#5358](https://github.com/cri-o/cri-o/pull/5358), [@haircommander](https://github.com/haircommander))
  - Containers now have a `/run/.containerenv` file to help applications identify that they are running inside a container. ([#5463](https://github.com/cri-o/cri-o/pull/5463), [@pjbgf](https://github.com/pjbgf))
+ - Now, if infra_ctr_cpuset is configured, conmon is put in the same cpuset ([#5414](https://github.com/cri-o/cri-o/pull/5414), [@haircommander](https://github.com/haircommander))
  - Skip SELinux volume relabeling for super privileged containers (`securityContext.seLinuxOptions.type = "spc_t"`). ([#5386](https://github.com/cri-o/cri-o/pull/5386), [@saschagrunert](https://github.com/saschagrunert))
  - The option to export OpenTelemetry trace data has been added. This is experimental and not enabled by default. To enable tracing, configure the tracing section of the crio configuration file. ([#4883](https://github.com/cri-o/cri-o/pull/4883), [@sallyom](https://github.com/sallyom))
 
