Update release notes

--- a/v1.20.6.md
+++ b/v1.20.6.md
@@ -12,14 +12,14 @@
 # CRI-O v1.20.6
 
 The release notes have been generated for the commit range
-[v1.20.5...4603183](https://github.com/cri-o/cri-o/compare/v1.20.5...46031839762a22ab47a6bff5c4bafdae6ba8cab0) on Fri, 12 Nov 2021 10:31:24 UTC.
+[v1.20.5...8594c20](https://github.com/cri-o/cri-o/compare/v1.20.5...8594c209918f921d417d1cf2b578d8a90e39953e) on Thu, 16 Dec 2021 10:32:53 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.46031839762a22ab47a6bff5c4bafdae6ba8cab0.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.46031839762a22ab47a6bff5c4bafdae6ba8cab0.tar.gz)
-- [cri-o.arm64.46031839762a22ab47a6bff5c4bafdae6ba8cab0.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.46031839762a22ab47a6bff5c4bafdae6ba8cab0.tar.gz)
+- [cri-o.amd64.8594c209918f921d417d1cf2b578d8a90e39953e.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.amd64.8594c209918f921d417d1cf2b578d8a90e39953e.tar.gz)
+- [cri-o.arm64.8594c209918f921d417d1cf2b578d8a90e39953e.tar.gz](https://storage.googleapis.com/k8s-conform-cri-o/artifacts/cri-o.arm64.8594c209918f921d417d1cf2b578d8a90e39953e.tar.gz)
 
 ## Changelog since v1.20.5
 
@@ -29,6 +29,7 @@ Download one of our static release bundles via our Google Cloud Bucket:
  - Skip SELinux volume relabeling for super privileged containers (`securityContext.seLinuxOptions.type = "spc_t"`). ([#5413](https://github.com/cri-o/cri-o/pull/5413), [@saschagrunert](https://github.com/saschagrunert))
 
 #### Uncategorized
+ - Backport the fix of merging storage_option from drop-in files to sttorage_option from storage.conf. ([#5435](https://github.com/cri-o/cri-o/pull/5435), [@QiWang19](https://github.com/QiWang19))
  - Fix a PID leak in situations where conmon fails to be moved into the pod cgroup ([#5370](https://github.com/cri-o/cri-o/pull/5370), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix a bug where CRI-O waits forever on a conmon process that will not stop ([#5408](https://github.com/cri-o/cri-o/pull/5408), [@openshift-cherrypick-robot](https://github.com/openshift-cherrypick-robot))
  - Fix an issue when a container with a terminal has an exec probe ([#5364](https://github.com/cri-o/cri-o/pull/5364), [@haircommander](https://github.com/haircommander))
