--- a/v1.23.0.md
+++ b/v1.23.0.md
@@ -2,8 +2,8 @@
   - [Downloads](#downloads)
   - [Changelog since v1.22.0](#changelog-since-v1220)
     - [Changes by Kind](#changes-by-kind)
-      - [Other](#other)
       - [Dependency-Change](#dependency-change)
+      - [Other](#other)
       - [API Change](#api-change)
       - [Feature](#feature)
       - [Documentation](#documentation)
@@ -18,24 +18,31 @@
 # CRI-O v1.23.0
 
 The release notes have been generated for the commit range
-[v1.22.0...cbcc270](https://github.com/cri-o/cri-o/compare/v1.22.0...cbcc2704e834f46d3421ba99917cbe9c608b58b4) on Thu, 16 Dec 2021 18:00:55 UTC.
+[v1.22.0...9b7f5ae](https://github.com/cri-o/cri-o/compare/v1.22.0...9b7f5ae815c22a1d754abfbc2890d8d4c10e240d) on Fri, 17 Dec 2021 02:18:48 UTC.
 
 ## Downloads
 
 Download one of our static release bundles via our Google Cloud Bucket:
 
-- [cri-o.amd64.cbcc2704e834f46d3421ba99917cbe9c608b58b4.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.cbcc2704e834f46d3421ba99917cbe9c608b58b4.tar.gz)
-- [cri-o.arm64.cbcc2704e834f46d3421ba99917cbe9c608b58b4.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.cbcc2704e834f46d3421ba99917cbe9c608b58b4.tar.gz)
+- [cri-o.amd64.9b7f5ae815c22a1d754abfbc2890d8d4c10e240d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.amd64.9b7f5ae815c22a1d754abfbc2890d8d4c10e240d.tar.gz)
+- [cri-o.arm64.9b7f5ae815c22a1d754abfbc2890d8d4c10e240d.tar.gz](https://storage.googleapis.com/cri-o/artifacts/cri-o.arm64.9b7f5ae815c22a1d754abfbc2890d8d4c10e240d.tar.gz)
 
 ## Changelog since v1.22.0
 
 ### Changes by Kind
 
-#### Other
- - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
-
 #### Dependency-Change
  - Bumps pause image to 3.6 ([#5310](https://github.com/cri-o/cri-o/pull/5310), [@wgahnagl](https://github.com/wgahnagl))
+
+#### Other
+ - Added annotation 'io.kubernetes.cri-o.cgroup2-rw(="true")' that mounts /sys/fs/cgroup as writable fs when using cgroups v2 ([#5277](https://github.com/cri-o/cri-o/pull/5277), [@ajwock](https://github.com/ajwock))
+ - Introduce the following metrics:
+  crio_operations_total, crio_operations_latency_seconds_total, crio_operations_latency_seconds,
+  crio_operations_errors_total, crio_image_pulls_bytes_total,
+  crio_image_pulls_skipped_bytes_total,
+  crio_image_pulls_success_total, crio_image_pulls_failure_total,
+  crio_image_layer_reuse_total, crio_containers_oom_count_total
+  while marking metric names that do not follow prometheus best practices as Deprecated in Prometheus metric help text. ([#5487](https://github.com/cri-o/cri-o/pull/5487), [@swghosh](https://github.com/swghosh))
 
 #### API Change
  - Drop support for `v1alpha2` Container Runtime Interface (CRI) and require `v1`. ([#5471](https://github.com/cri-o/cri-o/pull/5471), [@saschagrunert](https://github.com/saschagrunert))
